[metadata]
name = opentoolflux
version = attr: opentoolflux.__version__
url = https://github.com/rasmuse/opentoolflux
license = MIT License
license_files = LICENSE
# No support for multiple authors or email addresses
# Specify multiple authors/email addresses as a single string, e.g.,
# author = Jane Doe, John Doe
# author_email = jane@example.com, john@example.com
# https://stackoverflow.com/questions/9999829/how-to-specify-multiple-authors-emails-in-setup-py
author = Rasmus Einarsson, Carmen Galea, Alba Monistrol
author_email = python-opentoolflux@rasmuseinarsson.se
maintainer = Rasmus Einarsson
maintainer_email = python-opentoolflux@rasmuseinarsson.se
description = OpenToolFlux is a command-line application to estimate gas fluxes from automatic chamber data.
long_description = file: README.md
long_description_content_type = text/markdown
# See list of classifiers at https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >= 3.8
install_requires =
    click >= 8.0
    pandas >= 1.4.0
    pyarrow >= 8.0
    pydantic >= 1.9, < 2
    tomli >= 2.0.1
    matplotlib >= 3.5

[options.entry_points]
console_scripts =
    opentoolflux = opentoolflux.cli:main

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
